--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 		h1 {
 			padding-top: 10px;
 			margin-top: 0;
-			font-family: arial bold italic;
+			font-family: arial;
+			font-weight: bold;
+			font-style: italic;
 			font-size: 60px;
 			color: white;
 			text-shadow: 0 1px 0 rgba(0,0,0,.15), 0 2px 0 rgba(0,0,0,.15), 0 3px 0 rgba(0,0,0,.15), 0 4px 0 rgba(0,0,0,.15), 0 5px 0 rgba(0,0,0,.15);
