--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<link rel="shortcut icon" src="Resources/favicon.png">
+	<link rel="shortcut icon" href="Resources/favicon.png">
 	<title>HEATworks&trade;</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<link href='http://fonts.googleapis.com/css?family=Roboto:900' rel='stylesheet' type='text/css'>
@@ -95,7 +95,7 @@
 		}
 
 		.content#home {
-			background: url("http://a.espncdn.com/photo/2013/0508/play_wip_02.jpg");
+			background: url("Resources/aaa.jpg");
 			background-size: cover;
 		}
 
