-webkit- vendor prefixed

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 
 		.content.show {
 			opacity: 1 !important;
+			-webkit-transition: opacity 0.5s;
 			transition: opacity 0.5s;
 		}
 
@@ -141,12 +142,14 @@
 			width: 780px;
 			height: 40px;
 			padding: 10px;
+			background: -webkit-linear-gradient(rgba(0,0,0,0.8), transparent);
 			background: linear-gradient(rgba(0,0,0,0.8), transparent);
 			font-family: 'Lao UI';
 			font-size: 14px;
 			color: white;
 			cursor: pointer;
 			opacity: 0;
+			-webkit-transition: opacity 0.5s;
 			transition: opacity 0.5s;
 		}
 
@@ -155,6 +158,7 @@
 			left: 5px;
 			float: right;
 			cursor: pointer;
+			-webkit-transition: opacity 0.5s;
 			transition: opacity 0.5s;
 		}
 
@@ -164,6 +168,7 @@
 			width: 785px;
 			height: 50px;
 			padding-left: 15px;
+			background: -webkit-linear-gradient(rgb(50,50,50),rgb(40,40,40));
 			background: linear-gradient(rgb(50,50,50),rgb(40,40,40));
 			font-family: 'Arial';
 			font-size: 25px;
