--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			position: relative;
 			margin: -15px auto 0;
 			width: 800px;
-			height: 1180px;
+			height: 940px;
 			border-radius: 10px;
 			box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
 			background: rgb(244,244,244);
@@ -120,6 +120,12 @@
 
 		.content#mar25 {
 			background: url("https://farm8.staticflickr.com/7330/14184981405_da92b9a314_b.jpg");
+			background-position: 0 50%;
+			background-size: cover;
+		}
+
+		.content#mar31 {
+			background: url("https://farm3.staticflickr.com/2921/14205178536_142e4d1654_b.jpg");
 			background-position: 0 50%;
 			background-size: cover;
 		}
@@ -191,13 +197,19 @@
 			line-height: 50px;
 		}
 
-		.work {
+		#works {
 			position: relative;
 			top: 500px;
-			width: 770px;
+			width: 800px;
+			height: 360px;
+			overflow-y: scroll;
+		}
+
+		.work {
+			position: relative;
+			width: auto;
 			height: 90px;
 			padding: 15px;
-			margin: 0 auto;
 			box-shadow: inset 0 0 1px rgba(0,0,0,0.1);
 			background: white;
 			cursor: pointer;
@@ -221,6 +233,11 @@
 
 		.thumbnail#mar25 {
 			background: url("https://farm8.staticflickr.com/7330/14184981405_da92b9a314_m.jpg");
+			background-size: cover;
+		}
+
+		.thumbnail#mar31 {
+			background: url("https://farm3.staticflickr.com/2921/14205178536_142e4d1654_m.jpg");
 			background-size: cover;
 		}
 
@@ -301,15 +318,17 @@
 		</div>
 		<div class="content 0" id="mar10"></div>
 		<div class="content 1" id="mar25"></div>
-		<div class="content 2" id="jun9"></div>
-		<div class="content 3" id="jun18"></div>
-		<div class="content 4" id="mar3"></div>
+		<div class="content 2" id="mar31"></div>
+		<div class="content 3" id="jun9"></div>
+		<div class="content 4" id="jun18"></div>
+		<div class="content 5" id="mar3"></div>
 		<div id="info"></div>
 		<div id="timeline">#HEATimeline</div>
 		<span id="license">
 			&copy; 2014 - HEATworks&trade; is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons 4.0 License</a>
 		</span>
 
+		<div id="works">
 		<div class="work 0" id="mar10">
 			<div class="thumbnail" id="mar10"></div>
 			<span class="date">MARCH 10, 2012</span><br />
@@ -320,20 +339,26 @@
 			<span class="date">MARCH 25, 2013</span><br />
 			<span class="description">The HEAT won handily against a shorthanded Orlando Magic squad to stretch their record-setting run to a 27th consecutive victory&mdash;their longest win streak in franchise history and only six shy of the Lakers' top mark in the '72 season.</span>
 		</div>
-		<div class="work 2" id="jun9">
+		<div class="work 2" id="mar31">
+			<div class="thumbnail" id="mar31"></div>
+			<span class="date">MARCH 31, 2013</span><br />
+			<span class="description">No LeBron. No Wade. No problem. Chris Bosh sank a three-pointer at the top of the key with 1.1 to go to lift the HEAT to an 88-86 victory over the Spurs in what would be a prelude to an epic Finals match-up between the two.</span>
+		</div>
+		<div class="work 3" id="jun9">
 			<div class="thumbnail" id="jun9"></div>
 			<span class="date">JUNE 09, 2013</span><br />
 			<span class="description">#6 stood as the last line of defense against near 7-foot Tiago Splitter. Both rose up, meeting at the apices of their jumps. Splitter never found his way to the rim.</span>
 		</div>
-		<div class="work 3" id="jun18">
+		<div class="work 4" id="jun18">
 			<div class="thumbnail" id="jun18"></div>
 			<span class="date">JUNE 18, 2013</span><br />
 			<span class="description">Down 5 with 28.2 ticks left in Game 6 of the NBA Finals, the yellow rope had been brought out on the Miami HEAT. But one man on the floor that night had something to say about it. And it wasn't nice.</span>
 		</div>
-		<div class="work 4" id="mar3">
+		<div class="work 5" id="mar3">
 			<div class="thumbnail" id="mar3"></div>
 			<span class="date">MARCH 03, 2014</span><br />
 			<span class="description">LeBron put on a show against the visiting Bobcats, knocking down shot after shot, including 8/10 from deep. He ultimately finished the game with 61 points&mdash;a new career-high.</span>
+		</div>
 		</div>
 	</div>
 
@@ -353,21 +378,47 @@
 			switch (newShow.prop('id')) {
 				case 'mar10':
 					$('#info').html('<a href="https://farm6.staticflickr.com/5231/14205693564_593ac62c5f_o_d.jpg"><img src="Resources/download.png" class="download" id="mar10" /></a><b>"This is My House"</b><br /><small>by galacemiguel</small>');
+
+					$('#works').scrollTop(0);
 					break;
 				case 'mar25':
 					$('#info').html('<a href="https://farm8.staticflickr.com/7330/14184981405_f217ef0430_o_d.jpg"><img src="Resources/download.png" class="download" id="mar25" /></a><b>"27"</b><br /><small>by galacemiguel</small>');
+					if ($('#works').scrollTop() > 120) {
+						$('#works').scrollTop(120);
+					} 
+					break;
+				case 'mar31':
+					$('#info').html('<a href="https://farm3.staticflickr.com/2921/14205178536_5eb27a51c2_k_d.jpg"><img src="Resources/download.png" class="download" id="mar31" /></a><b>"KA-BOSH"</b><br /><small>by galacemiguel</small>');
+
+					if ($('#works').scrollTop() > 240) {
+						$('#works').scrollTop(240);
+					}
 					break;
 				case 'jun9':
 					$('#info').html('<a href="https://farm3.staticflickr.com/2852/13374433513_b4b05a9c9b_o_d.jpg"><img src="Resources/download.png" class="download" id="jun9" /></a><b>"NOT TONIGHT."</b><br /><small>by galacemiguel</small>');
+
+					if ($('#works').scrollTop() < 120) {
+						$('#works').scrollTop(120);
+					}
 					break;
 				case 'jun18':
 					$('#info').html('<a href="https://farm8.staticflickr.com/7361/12948629634_3275ebd683_k_d.jpg"><img src="Resources/download.png" class="download" id="jun18" /></a><b>"Ropes"</b><br /><small>by galacemiguel</small>');
+
+					if ($('#works').scrollTop() < 240) {
+						$('#works').scrollTop(240);
+					}
 					break;
 				case 'mar3':
-					$('#info').html('<a href="https://farm8.staticflickr.com/7353/12948713374_0261db62ed_o_d.jpg"><img src="Resources/download.png" class="download" id="mar3" /></a><b>"SIXTY-ONE."</b><br /><small>by galacemiguel</small>');
+					$('#info').html('<a href="https://farm8.staticflickr.com/7353/12948713374_0261db62ed_o_d.jpg"><img src="Resources/download.png" class="download" id="mar3" /></a><b>"SIXTY-ONE"</b><br /><small>by galacemiguel</small>');
+
+					$('#works').scrollTop(360);
 					break;
 			}
 		}
+
+		$('#works').scroll(function() {
+			console.log($(this).scrollTop());
+		});
 
 		$('.content').click(function() {
 			var cycle = function() {
